Refactor network and configuration variables:
- Standardize network names using `{{ proxy_network_name }}` and `{{ monitoring_network_name }}` across Docker Compose files and Ansible tasks.
- Migrate from inline environment variables to `.env` files for improved manageability and consistency.
- Use `{{ docker_restart_policy }}` for restart policies in Docker Compose files.
- Align Ansible templates and tasks with updated variable naming and structure.
- Remove redundant Dozzle and Jellyfin domains from `test` environment configuration.

--- a/ansible/roles/database/tasks/main.yml
+++ b/ansible/roles/database/tasks/main.yml
@@ -35,6 +35,8 @@
     src: ../../../docker/stateful/redis/docker-compose.yml
     dest: "{{ storage.ansible.compose }}/redis/docker-compose.yml"
     mode: '0644'
+    trim_blocks: true
+    lstrip_blocks: true
 
 - name: Démarrer la stack Redis
   community.docker.docker_compose_v2:
